# flask-ai-starter

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  analyze.py  collect.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  set-up-environment.sh
.github/workflows/: test-and-build.yml  test.yml
databases/: create_databases.sql
databases/versions/: b843cebc9fc7_initial_schema.py
starter/: __main__.py  app.py  collect.py  environment.py  health_api.py  index_page.py
starter/ai/: chunker.py  open_ai_client.py  tokenizer.py
starter/database_support/: database_template.py
starter/documents/: chunks_gateway.py  document_collector.py  documents_gateway.py  documents_service.py
starter/query/: query_service.py
starter/result/: result.py
starter/rss/: link_extractor.py  text_extractor.py
starter/search/: chunks_search_service.py  embeddings_analyzer.py  embeddings_gateway.py  vector_support.py
starter/templates/: error.html  index.html  layout.html  response.html
tests/: blueprint_test_support.py  chat_support.py  db_test_support.py  document_support.py  embeddings_support.py  logging_support.py  rss_support.py  test_health_api.py  test_index_page.py
tests/ai/: test_chunker.py  test_open_ai_client.py  test_tokenizer.py
tests/documents/: test_chunks_gateway.py  test_document_collector.py  test_documents_gateway.py  test_documents_service.py
tests/query/: test_query_service.py
tests/rss/: test_link_extractor.py  test_text_extractor.py
tests/search/: test_chunks_search_service.py  (+2 more)
(+1 files in other folders)
