[project]
name = "flask-ai-starter"
version = "0.1.0"
description = "Flask AI Starter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.3",
    "sqlalchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "tiktoken==0.7.0",
    "requests==2.32.3",
    "feedparser==6.0.11",
    "responses==0.25.2",
    "beautifulsoup4==4.12.3",
]
